--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cake-api",
+  "name": "api_prisma",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,64 +21,49 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/axios": "^4.0.1",
-    "@nestjs/bullmq": "^11.0.3",
-    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/platform-express": "^11.1.6",
-    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.1.6",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
-    "argon2": "^0.44.0",
-    "axios": "^1.12.2",
-    "bullmq": "^5.58.9",
-    "cache-manager": "^7.2.2",
-    "cache-manager-ioredis-yet": "^2.1.2",
+    "axios": "^1.9.0",
+    "bullmq": "^5.53.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "compression": "^1.8.1",
-    "handlebars": "^4.7.8",
+    "class-validator": "^0.14.1",
+    "compression": "^1.8.0",
+    "dotenv": "^16.5.0",
     "helmet": "^8.1.0",
-    "ms": "^2.1.3",
+    "mysql2": "^3.14.1",
     "nestjs-i18n": "^10.5.1",
-    "nestjs-pino": "^4.4.1",
-    "nodemailer": "^7.0.6",
-    "pg": "^8.16.3",
-    "pino-http": "^10.5.0",
-    "pino-pretty": "^13.1.1",
+    "nestjs-pino": "^4.4.0",
+    "nodemailer": "^7.0.3",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "tslib": "^2.8.1",
-    "typeorm": "^0.3.27",
+    "typeorm": "^0.3.22",
     "typeorm-extension": "^3.7.1",
-    "uuid": "^13.0.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.0.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@eslint/js": "^9.36.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.13.19",
-    "@types/compression": "^1.8.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/ms": "^2.1.0",
     "@types/node": "^20.3.1",
-    "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.0",
-    "@types/uuid": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
