--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^11.1.6",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "argon2": "^0.44.0",
     "axios": "^1.9.0",
     "bullmq": "^5.53.1",
     "class-transformer": "^0.5.1",
