--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "argon2": "^0.44.0",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "bullmq": "^5.53.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -56,6 +57,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
