--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/bullmq": "^11.0.2",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -40,6 +41,7 @@
     "class-validator": "^0.14.1",
     "compression": "^1.8.0",
     "dotenv": "^16.5.0",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "mysql2": "^3.15.1",
     "nestjs-i18n": "^10.5.1",
