--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mysql2": "^3.15.1",
     "nestjs-i18n": "^10.5.1",
     "nestjs-pino": "^4.4.0",
+    "nestjs-zod": "^5.0.1",
     "nodemailer": "^7.0.3",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
@@ -53,7 +54,8 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.22",
     "typeorm-extension": "^3.7.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -63,6 +65,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
