--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.53.1",
+    "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.8.0",
@@ -62,6 +63,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
