--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.940.0",
+    "@aws-sdk/lib-storage": "^3.940.0",
+    "@aws-sdk/s3-request-presigner": "^3.940.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/bullmq": "^11.0.2",
@@ -29,7 +32,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "11.1.6",
     "@nestjs/swagger": "^11.1.6",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
@@ -44,6 +47,7 @@
     "dotenv": "^16.5.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.1",
     "nestjs-i18n": "^10.5.1",
     "nestjs-pino": "^4.4.0",
@@ -64,7 +68,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/ejs": "^3.1.5",
-    "@types/express": "^4.17.17",
+    "@types/express": "5.0.3",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.38",
