--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # yarn run start
 # nest g resource modules/customers --no-spec
 # http://localhost:3000/
+# ssh -i ~/.ssh/id_ed25519 flashpanel@103.216.118.240 -p 24700
+
 ##== Environment
 NODE_ENV=development
 MODULES_SET=monolith
