--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "typeorm": "^0.3.22",
     "typeorm-extension": "^3.7.1",
     "uuid": "^11.1.0",
