--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "5.0.3",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
